# provision

./: .ansible-lint  .env.dist  .gitignore  .yamllint  .yamllint.yaml  README.md  Taskfile.dist.yml  Vagrantfile  Vagrantfile.dist  ansible.cfg  pyproject.toml  ssh.cfg
.config/: ansible-lint.yml  vagrant.json  yamllint.yml
.github/: dependabot.yml
.github/workflows/: ansible-lint.yml
ansible/: connection.yml  hyperland.yml  provision.yml
ansible/inventory/: localhost.yml  targets.yml
ansible/inventory/group_vars/: all
ansible/roles/: requirements.yml
ansible/tasks/: task.yml
ansible/templates/dotfiles/: .vimrc.j2  .xinitrc.j2
ansible/templates/dotfiles/.config/: Xresources
ansible/templates/dotfiles/.config/alacritty/: alacritty.yml
ansible/templates/dotfiles/.config/fontconfig/: fonts.conf
ansible/templates/dotfiles/.config/git/: ignore
ansible/templates/dotfiles/.config/i3/: config
ansible/templates/dotfiles/.config/i3/dmenus/: i3menu.py
ansible/templates/dotfiles/.config/kitty/: kitty.conf
ansible/templates/dotfiles/.config/mc/: ini
ansible/templates/dotfiles/.config/nvim/: cSpell.json  coc-settings.json  init.vim
ansible/templates/dotfiles/.config/qterminal.org/: qterminal.ini
ansible/templates/dotfiles/.config/terminator/: config
scripts/: play
scripts/utils/: _ansible.sh
