[tool.poetry]
name = "provision"
version = "0.1.0"
description = "OS Provisioning"
authors = ["Searge"]
license = "BSD 3-Clause"
readme = "README.md"
repository = "https://github.com/Searge/provision"
keywords = ["ansible", "provisioning", "os"]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "License :: OSI Approved :: BSD 3-Clause License",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Framework :: Ansible",
    "Development Status :: 1 - Planning",
]

[tool.poetry.dependencies]
python = "^3.10"
ansible-core = "^2.14"
ansible = "*"
cryptography = "^42.0.4"
jmespath = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
yamllint = "^1.33.0"
ansible-lint = { version = "^6.22.2", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
