[tool.poetry]
name = "provision"
version = "0.1.0"
description = "OS Provisioning"
authors = ["Searge"]
license = "BSD 3-Clause"
readme = "README.md"
repository = "https://github.com/Searge/provision"
keywords = ["ansible", "provisioning", "os"]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "License :: OSI Approved :: BSD 3-Clause License",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Framework :: Ansible",
    "Development Status :: 1 - Planning",
]

[tool.poetry.dependencies]
python = "^3.10"
ansible-core = "^2.17"
ansible = "*"
cryptography = "^44.0.1"
jmespath = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
yamllint = "^1.37.0"
ansible-lint = { version = "^24.12.2", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
